force-app/main/default/objects/CourseAttendance__c/CourseAttendance__c.object-meta.xml
<CustomObject>
    <description>Tracks attendance for the students of a course</description>
    <label>Course Attendance</label>
    <nameField>
        <displayFormat>A-{0}</displayFormat>
        <label>Attendence Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Attendance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>