force-app/main/default/objects/CourseAttendance__c/fields/AttendanceNotes__c.field-meta.xml
<CustomField>
    <fullName>AttendanceNotes__c</fullName>
    <label>Attendance Notes</label>
    <type>TextArea</type>
</CustomField>