force-app/main/default/objects/CourseAttendance__c/fields/Attended__c.field-meta.xml
<CustomField>
    <fullName>Attended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attended</label>
    <type>Checkbox</type>
</CustomField>