force-app/main/default/objects/CourseAttendance__c/fields/CourseAttendeeEnrollmentId__c.field-meta.xml
<CustomField>
    <fullName>CourseAttendeeEnrollmentId__c</fullName>
    <label>Course Attendee Enrollment</label>
    <referenceTo>CourseEnrollment__c</referenceTo>
    <relationshipLabel>Course Attendance</relationshipLabel>
    <relationshipName>Course_Attendance</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>