force-app/main/default/objects/CourseAttendance__c/fields/ScheduledCourseDayId__c.field-meta.xml
<CustomField>
    <fullName>ScheduledCourseDayId__c</fullName>
    <label>Scheduled Course Day</label>
    <referenceTo>ScheduledCourseDay__c</referenceTo>
    <relationshipLabel>Course Attendance</relationshipLabel>
    <relationshipName>Course_Attendance</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>