force-app/main/default/objects/CourseAttendance__c/fields/ScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>ScheduledDate__c</fullName>
    <formula>DATETIMEVALUE( ScheduledCourseDayId__r.ScheduledDate__c )</formula>
    <label>Scheduled Date</label>
    <type>Date</type>
</CustomField>